# SDiIS

Lab1/: CMakeLists.txt  Da  Doxyfile  Tic-Tac-Toe.hpp  main.cpp
Lab1/UnitTests/: CMakeLists.txt  Tic-Tac-Toe.hpp  build_tests.sh  mock_TTC.hpp
Lab1/html/: _tic-_tac-_toe_8hpp.html  _tic-_tac-_toe_8hpp_source.html  annotated.html  class_tic___tac___toe-members.html  class_tic___tac___toe.html  classes.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  main_8cpp.html
Lab1/html/search/: all_0.js  all_2.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  classes_0.js  defines_0.js  defines_1.js  defines_2.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_6.js  functions_7.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js
lab2/: CMakeLists.txt
lab2/src/: BuildingCompany.hpp
lab2/src/Affiliates/: affilates.cpp  affilates.hpp
lab2/src/Department/: department.cpp  department.hpp
lab2/src/Employee/: employee.cpp  employee.hpp
lab2/src/Machinery/: machinery.cpp  machinery.hpp
lab2/src/Material/: material.cpp  material.hpp
lab2/src/Order/: order.cpp  order.hpp
lab2/src/Position/: position.cpp  position.hpp
lab2/src/Position/Rabotyaga/: rabotyaga.cpp  rabotyaga.hpp
lab2/src/Project/: project.cpp  project.hpp
lab2/src/Storage/: storage.cpp  storage.hpp
